docs: 新增"systemctl管理服务"，但仍不全